--- a/404.md
+++ b/404.md
@@ -1,2 +1,9 @@
 <h1>I never heard of that path. What path is it?</h1>
 <a href="https://mystuffyt.github.io/Discord-Nitro-Rickrolls-You/">Go Back</a>
+<style>
+a:link {
+  color: green;
+  background-color: transparent;
+  text-decoration: none;
+}
+</style>
